# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  01 Aug 2004; Marius Mauch <genone@gentoo.org> bin/emerge:
  Added a warning for `emerge /path/to/ebuild`

  01 Aug 2004; Marius Mauch <genone@gentoo.org> bin/emerge:
  Fixing broken logic for the `emerge rsync` deprecation notice (it only showed
  up on `emerge --rsync`).

  01 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py bin/emerge:
  Fixed the lockfile/unlockfile functions so that they correctly support having
  an int passed in (the fd #), or having a file object passed in.  Corrected 
  lockfile so that the lock is owned by portage group, with g+w permissions
  (this is needed since sudo emerge blar can bail, leaving a stale lock that 
  non-root usage cannot remove).  Added locking to emerge's emergelog function, 
  preventing log messages from potentially getting mixed together.  Added check 
  to fetch function to complain if unable to write to DESTDIR (previously the 
  fetcher just bailed, stepping through each src_uri).  Added lockfiles for 
  fetching/md5ing of the src- these lockfiles are stored in a subdirectory 
  (locks_in_subdir=".locks") if specified, and locking is controlled via 
  use_locks (defaults to on).  emerge -f no longer requires root/sudo to run 
  (ebuild never had this restriction). (#42969)

  31 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py bin/emerge:
  Removed USE-based SLOT support. Removed uselist from getslot methods.

  29 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Added check for
  files over 20k in a packages files directory.  file.size, repoman treats it 